refactor(prototype-api): Refactor database so entity Relationship is defined as edge"
