# prototype-api/src/relationship/dto/update-relationship.dto.ts
@@ -1,4 +1,6 @@
-import { PartialType } from '@nestjs/swagger';
+import { PartialType, OmitType } from '@nestjs/swagger';
 import { CreateRelationshipDto } from './create-relationship.dto.js';
 
-export class UpdateRelationshipDto extends PartialType(CreateRelationshipDto) {}
+export class UpdateRelationshipDto extends PartialType(
+  OmitType(CreateRelationshipDto, ['sourceId', 'targetId'] as const),
+) {}
